# Freshman_Course_Design

./: CMakeLists.txt  base.h  data_utility.c  global_definition.h  linsnow.c  main.c  menu.c  question_operation.c  score_management.c  stu1.txt  student_operation.c  students.txt
backup/: questions_backup.txt  students_backup.txt
data_set/: students.txt
